--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <header class="bg-primary-subtle fixed-top " data-bs-theme="dark">
+    <header class="fixed-top bg-black rounded-bottom-4 " data-bs-theme="dark">
         <nav class="container d-flex flex-wrap justify-content-center py-3 border-bottom   ">
             <a href="#"
                 class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -299,18 +299,48 @@
     </main>
 
 
-    <footer id="contacto" class="container">
-        <div class="py-3 my-4">
+    <footer id="contacto" class="container-fluid bg-black" data-bs-theme="dark">
+        <div class="py-3 mt-4">
+            <h4 id="frase" class="text-center text-white">"Frase cool"</h4>
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+                <!-- instagram -->
+                <li class="nav-item">
+                    <a href="https://www.instagram.com/kari220305?igsh=M2c5ZmQwaWVoeWZs"
+                        class="nav-link px-2 text-body-secondary" target="_blank">
+                        <i class="bi bi-instagram fs-3"></i>
+                    </a>
+                </li>
+                <!-- github -->
+                <li class="nav-item">
+                    <a href="https://github.com/KatyE0" class="nav-link px-2 text-body-secondary" target="_blank">
+                        <i class="bi bi-github fs-3"></i>
+                    </a>
+                </li>
+                <!-- linked -->
+                <li class="nav-item">
+                    <a href="#" class="nav-link px-2 text-body-secondary" target="_blank">
+                        <i class="bi bi-linkedin fs-3"></i>
+                    </a>
+                </li>
+                <!-- Correo -->
+                <li class="nav-item">
+                    <a href="mailto:okaty9303@gmail.com" class="nav-link px-2 text-body-secondary" target="_blank">
+                        <i class="bi bi-envelope fs-3"></i>
+                    </a>
+                </li>
+                <!-- tiktok -->
+                <li class="nav-item">
+                    <a href="https://www.tiktok.com/@katy220305?_t=8oKKTJKGv25&_r=1"
+                        class="nav-link px-2 text-body-secondary" target="_blank">
+                        <i class="bi bi-tiktok fs-3"></i>
+                </li>
+
             </ul>
-            <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
+            <p class="text-center text-body-secondary">© 2024 Karina, TECNOLOCHICAS PRO</p>
         </div>
     </footer>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
