--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
 
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
+
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -23,7 +28,7 @@
 </head>
 
 <body>
-    <header class="fixed-top bg-black rounded-bottom-4 " data-bs-theme="dark">
+    <header class="fixed-top rounded-bottom-4 menupegajoso " data-bs-theme="dark">
         <nav class="container d-flex flex-wrap justify-content-center py-3 border-bottom   ">
             <a href="#"
                 class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -31,13 +36,15 @@
             </a>
 
             <ul class="nav nav-pills">
-                <li class="nav-item px-2"><a href="#habilidades" class="nav-link active"
+                <li class="nav-item px-1 "><a href="#habilidades" class="nav-link menu-btn"
                         aria-current="page">Habilidades</a></li>
-                <li class="nav-item px-2"><a href="#proyectos" class="nav-link active" aria-current="page">Proyectos</a>
+                <li class="nav-item px-1"><a href="#proyectos" class="nav-link menu-btn"
+                        aria-current="page">Proyectos</a>
                 </li>
-                <li class="nav-item px-2"><a href="#testimonios" class="nav-link active"
+                <li class="nav-item px-1"><a href="#testimonios" class="nav-link menu-btn"
                         aria-current="page">Testimonios</a></li>
-                <li class="nav-item px-2 "><a href="#contacto" class="nav-link active" aria-current="page">Contacto</a>
+                <li class="nav-item px-1 "><a href="#contacto" class="nav-link menu-btn"
+                        aria-current="page">Contacto</a>
                 </li>
 
 
@@ -55,15 +62,17 @@
                 data-bs-theme="dark">
                 <div class="row flex-lg-row align-items-center g-5">
                     <div class="col-lg-6">
-                        <h1 id="app" class="display-5 fw-bold text-body-emphasis lh-1 mb-3 text-shadow-1">Karina
+                        <h1 id="app" class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Karina
                             Escalante
                         </h1>
-                        <p class="lead text-white text-shadow-1">Hola, soy Kari, amante de la tecnología, la robotica,
+                        <p class="lead text-white text-shadow-1 ">Hola, soy Kari, amante de la tecnología, la
+                            robotica,
                             la música y los gatos :3.</p>
                         <p class="lead text-white text-shadow-1">Tecnico en Programación</p>
                         <p class="lead text-white text-shadow-1">Estudiante de Ingeniería mecatrónica en el IPN</p>
                         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                            <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Contáctame</button>
+                            <a type="button" href="mailto:okaty9303@gmail.com"
+                                class="btn btn-dark btn-lg px-4 me-md-2">Contáctame</a>
                             <button type="button" class="btn btn-secondary btn-lg px-4">Descarga mi CV</button>
                         </div>
                     </div>
@@ -76,49 +85,49 @@
                 <h2 class="pb-2 border-bottom">Habilidades Tecnologicas</h2>
 
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 pt-5">
-                    <div class="col d-flex align-items-start">
+                    <div class="col d-flex align-items-center justify-content-center">
                         <div class="text-center">
                             <img src="assets/habilidades/html.webp" alt="html" width="100px">
                             <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">HTML</h3>
                         </div>
                     </div>
-                    <div class="col d-flex align-items-start">
+                    <div class="col d-flex align-items-center justify-content-center">
                         <div class="text-center">
                             <img src="assets/habilidades/css.webp" alt="css" width="100px">
                             <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">CSS</h3>
                         </div>
                     </div>
-                    <div class="col d-flex align-items-start">
+                    <div class="col d-flex align-items-center justify-content-center">
                         <div class="text-center">
                             <img src="assets/habilidades/js.webp" alt="js" width="100px">
                             <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">JAVASCRIPT</h3>
                         </div>
                     </div>
-                    <div class="col d-flex align-items-start">
+                    <div class="col d-flex align-items-center justify-content-center">
                         <div class="text-center">
                             <img src="assets/habilidades/bootstrap.webp" alt="bootstrap" width="100px">
                             <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">BOOTSTRAP</h3>
                         </div>
                     </div>
-                    <div class="col d-flex align-items-start">
+                    <div class="col d-flex align-items-center justify-content-center">
                         <div class="text-center">
                             <img src="assets/habilidades/cmasmas.png" alt="c++" width="100px">
                             <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">C++</h3>
                         </div>
                     </div>
-                    <div class="col d-flex align-items-start">
+                    <div class="col d-flex align-items-center justify-content-center">
                         <div>
                             <img src="assets/habilidades/c.webp" alt="c#" width="100px">
                             <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">C#</h3>
                         </div>
                     </div>
-                    <div class="col d-flex align-items-start">
+                    <div class="col d-flex align-items-center justify-content-center">
                         <div>
                             <img src="assets/habilidades/php.webp" alt="php" width="100px">
                             <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">PHP</h3>
                         </div>
                     </div>
-                    <div class="col d-flex align-items-start">
+                    <div class="col d-flex align-items-center justify-content-center">
                         <div>
                             <img src="assets/habilidades/mysql.webp" alt="MySQL" width="100px">
                             <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">MySQL</h3>
@@ -131,26 +140,26 @@
                 <h2 class="pb-2 border-bottom">Habilidades Sociales y Comunicativas</h2>
 
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 pt-5 ">
-                    <div class="col d-flex align-items-start">
+                    <div class="col d-flex align-items-center justify-content-center">
                         <div class="text-center">
                             <img src="assets/habilidades/problema.webp" alt="resolucion" width="100px">
                             <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Resolucion de problemas</h3>
                             <!-- <a href="https://www.flaticon.es/iconos-gratis/problema" title="problema iconos">Problema iconos creados por Eucalyp - Flaticon</a> -->
                         </div>
                     </div>
-                    <div class="col d-flex align-items-start">
+                    <div class="col d-flex align-items-center justify-content-center">
                         <div class="text-center">
                             <img src="assets/habilidades/liderazgo.webp" alt="liderazgo" width="100px">
                             <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Liderazgo</h3>
                         </div>
                     </div>
-                    <div class="col d-flex align-items-start">
+                    <div class="col d-flex align-items-center justify-content-center">
                         <div class="text-center">
                             <img src="assets/habilidades/creatividad.webp" alt="creatividad" width="100px">
                             <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Creatividad</h3>
                         </div>
                     </div>
-                    <div class="col d-flex align-items-start">
+                    <div class="col d-flex align-items-center justify-content-center">
                         <div class="text-center">
                             <img src="assets/habilidades/detalle.webp" alt="detalle" width="100px">
                             <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Atención al detalle</h3>
@@ -215,18 +224,18 @@
 
                             <div class="col">
                                 <div class="card shadow-sm">
-                                    <img src="assets/blog.png" alt="proyecto-google"
+                                    <img src="assets/spa.png" alt="proyecto-google"
                                         class="bd-placeholder-img card-img-top">
                                     <div class="card-body">
                                         <h4 class="card-text">Pagina para un SPA</h4>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <div class="btn-group">
                                                 <button type="button" class="btn btn-sm btn-outline-secondary"><a
-                                                        href="https://my-blog-six-wheat.vercel.app/" target="_blank"
+                                                        href="https://pagina-spa.vercel.app/" target="_blank"
                                                         rel="noopener noreferrer" class="proyecto-link">Ver
                                                         demo</a></button>
                                                 <button type="button" class="btn btn-sm btn-outline-secondary"><a
-                                                        href="https://github.com/KatyE0/blog" target="_blank"
+                                                        href="https://github.com/KatyE0/pagina-spa" target="_blank"
                                                         rel="noopener noreferrer"
                                                         class="proyecto-link">Repositorio</a></button>
                                             </div>
@@ -258,8 +267,9 @@
                             <article class="text-center px-5 py-5">
                                 <img class="rounded-4" src="assets/litzi.jpg" height="300px" alt="Testimonio 1">
                                 <h3 class="my-3">Litzi Sánchez</h3>
-                                <p>Karina ha demostrado ser una alumna responsable y muy creativa durante el curso. Su
-                                    interés por aprender la motiva a mejorar con cada proyecto que realiza.</p>
+                                <p>"Karina Escalante ha demostrado ser una alumna responsable y muy creativa durante el
+                                    curso. Su
+                                    interés por aprender la motiva a mejorar con cada proyecto que realiza."</p>
                                 <!-- <p>Litzi Sánchez.</p> -->
                                 <p>Mentora Técnica en Tecnolochicas.</p>
                             </article>
@@ -295,6 +305,14 @@
                 </div>
             </div>
         </section>
+
+        <div>
+            <a href="#" class="btn-up">
+                <i class="bi bi-chevron-up"></i>
+
+            </a>
+        </div>
+
 
     </main>
 
